# emu

./: .gitignore  LICENSE  README.md  Spiral Trajectory.md  concat.ps1  dune-project
demo/: demo.ml  demo2.ml
docs/: Avalanches.md  Computational Model.md  Emu Project Context (Condensed Continuation Prompt).txt  Emu as FSM network Unfolder.md  Emu for Education.md  Formalization.md  Instructions.md  Intro.Why Emu is Exist.md  Operational Semantics.md  README_RU.md  VM.md
lib/: dune
src/: builder.ml  digest.ml  dlist.ml  dune  emu.ml  instructions.ml  meta.ml  net.ml  node.ml  queue.ml  runtime.ml  snapshot.ml  snoc.ml  state.ml  step.ml  tool.ml  vm.ml
src/builder/: builder.ml  dune
src/digest/: digest.ml  dune
src/dlist/: dune
src/instructions/: dune  instructions.ml
src/meta/: dune
src/net/: dune  net.ml
src/node/: dune  node.ml
test/: dune  test_chess_clock.ml  test_digital_locker.ml  test_digital_vault.ml  test_dlist.ml  test_fib.ml  test_fib_mod.ml  test_loop.ml  test_net.ml  test_node.ml  test_queue.ml  test_runtime.ml  test_stack.ml  test_step.ml  test_vm.ml
test/digital_locker/: dune  ext.ml  leaf.ml  net.ml  observer.ml  payload.ml  router.ml  test_digital_locker.ml  unlocker.ml
test/digital_multi_locker/: dune  ext.ml  leaf.ml  net.ml  observer.ml  router.ml  test_digital_multi_locker.ml  test_huge_digital_multi_locker.ml  test_leaves.ml  utils.ml
test/sorting_net/: dune  ext.ml  net.ml  router.ml  sink.ml  test_sorting_net.ml  utils.ml
test/unique_net/: dune  ext.ml  net.ml  router.ml  sink.ml  test_unique_net.ml  utils.ml
(+57 files in other folders)
