(test
 (name test_fib_mod)
 (libraries emu ounit2)
 ;(enabled_if false)
 )
 
(test
 (name test_chess_clock)
 (libraries emu ounit2)
 ;(enabled_if false)
 )
 
(test
 (name test_digital_vault)
 (libraries emu ounit2)
 ;(enabled_if false)
 )
 
(test
 (name test_stack)
 (libraries emu ounit2))
 
 (test
 (name test_queue)
 (libraries emu ounit2))
 
 (test
 (name test_dlist)
 (libraries emu ounit2))
 
